--- a/index.html
+++ b/index.html
@@ -79,63 +79,63 @@
       <div id="projects" class="projects content">
         <h2 class="text-7xl mx-10 my-10 text-center">Projects</h2>
         <a
-          href="https://vercel.com/prashanthandel2501-gmailcom/multiplication-app/GqpxQPAMrbud8AWdph7xGwxCw7wj"
+          href="https://multiplication-1olv301pp-prashanthandel2501-gmailcom.vercel.app/"
           target="_blank"
         >
           <div class="btn">Multiplication App For Children</div>
         </a>
 
         <a
-          href="https://vercel.com/prashanthandel2501-gmailcom/button-ripple-effect/8PHD2W1gKZuM594RW3RfHnMpbKdR"
+          href="https://button-ripple-effect-iota.vercel.app/"
           target="_blank"
         >
           <div class="btn">Button ripple Effect</div>
         </a>
 
         <a
-          href="https://vercel.com/prashanthandel2501-gmailcom/real-time-character-counter/45BBRGzdurJwRWy96zYjURbYhVK8"
+          href="https://real-time-character-counter.vercel.app/"
           target="_blank"
         >
           <div class="btn">Real Time Character Counter</div>
         </a>
 
         <a
-          href="https://vercel.com/prashanthandel2501-gmailcom/digital-clock/9ZE7SuECM686wNFkXjovxo9ig78v"
+          href="https://digital-clock-one-sigma.vercel.app/"
           target="_blank"
         >
           <div class="btn">Digital Clock</div>
         </a>
 
         <a
-          href="https://vercel.com/prashanthandel2501-gmailcom/sticky-navbar/8FWE6oK9nMuPquKVXz4bWojxkfDv"
+          href="https://sticky-navbar-three.vercel.app/"
           target="_blank"
         >
           <div class="btn">Sticky NavBar Transition Effect</div>
         </a>
 
         <a
-          href="https://vercel.com/prashanthandel2501-gmailcom/simple-calculator/3Mg3XVZahdTrPR3Vzo74Siu7CSPF"
+          href="https://simple-calculator-drab-gamma.vercel.app/"
           target="_blank"
         >
           <div class="btn">Simple Calculator</div>
         </a>
 
         <a
-          href="https://vercel.com/prashanthandel2501-gmailcom/analog-clock/BBhcQYX7d67SYBT1bYQ2DzWA1trc"
+          href="https://analog-clock-bice.vercel.app/"
           target="_blank"
         >
           <div class="btn">Analog clock</div>
         </a>
 
         <a
-          href="https://vercel.com/prashanthandel2501-gmailcom/tic-tac-toe/6VacA3cEWyjGqMWdgtP2vn3HRpLP"
+          href="https://tic-tac-toe-xi-eight.vercel.app/"
           target="_blank"
         >
           <div class="btn">Tic tac Toe</div>
         </a>
 
         <a
-          href="https://vercel.com/prashanthandel2501-gmailcom/emoji-rating/BmobFeSV3S4KQ4FJ5kQFZCoCQDDk"
+          href="https://emoji-rating-lac.vercel.app/"
           target="_blank"
         >
           <div class="btn">Emoji Rating App</div>
